--- a/telas/cadastro.html
+++ b/telas/cadastro.html
@@ -8,10 +8,10 @@
 <body>
     <form action="cadastro.php" method="post">
 
-    <input type="text" name="nome">
-    <input type="text"name="sobrenome">
-    <input type="email"name="email">
-    <input type="password"name="senha">   
+    <input type="text" name="nome" placeholder="nome">
+    <input type="text"name="sobrenome" placeholder="sobrenome">
+    <input type="email"name="email" placeholder="email">
+    <input type="password"name="senha" placeholder="senha">   
     <button type="submit">cadastrar</button> 
     </form>
 
