--- a/telas/cadastro.html
+++ b/telas/cadastro.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/stylecadastro.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="content">
     <form action="cadastro.php" method="post">
-
+    <label for="nome">Nome</label>
     <input type="text" name="nome" placeholder="nome">
+    <label for="nome">Sobrenome</label>
     <input type="text"name="sobrenome" placeholder="sobrenome">
+    <label for="nome">Email</label>
     <input type="email"name="email" placeholder="email">
-    <input type="password"name="senha" placeholder="senha">   
+    <label for="nome">Senha</label>
+    <input type="password"name="senha" placeholder="senha">
+    <a href=""></a>   
+</div>
     <button type="submit">cadastrar</button> 
     </form>
 
