--- a/telas/login.html
+++ b/telas/login.html
@@ -22,6 +22,9 @@
                 </div>
                 <input type="submit" value="ENTRAR" class="submit-btn">
             </form>
+            <div class="teste">
+                <label for="">Não tem um cadastro? </label>
+                <a href="cadastro.html">Registre-se</a>
         </div>
     </div>
 </body>
