--- a/telas/cadastro.html
+++ b/telas/cadastro.html
@@ -35,7 +35,7 @@
             </form>
             <div class="teste">
             <label for="">Já tem um cadastro? </label>
-            <a href="login.html"> Faça login</a>
+            <a href="login.php"> Faça login</a>
         </div>
         </div>
     </div>
