--- a/telas/cadastro.html
+++ b/telas/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylecadastro.css">
+    <link rel="icon" href="../img/IMG_3577.ico" type="image/x-icon">
     <title>Cadastro - EcoPoints</title>
 </head>
 <body>
