--- a/telas/navbar.html
+++ b/telas/navbar.html
@@ -15,6 +15,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="white"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
             </button>
             <div id="myDropdown" class="dropdown-content">
+                <a href="cadastro.html">Cadastro</a>
                 <a href="cadastro.html">Login</a>
                 <a href="#">Ranking</a>
                 <a href="#">Premios</a>
