--- a/telas/navbar.html
+++ b/telas/navbar.html
@@ -17,9 +17,10 @@
             <div id="myDropdown" class="dropdown-content">
                 <a href="cadastro.html">Cadastro</a>
                 <a href="cadastro.html">Login</a>
-                <a href="#">Ranking</a>
+                <a href="ranking.html">Ranking</a>
                 <a href="#">Premios</a>
-                <a href="#">Registrar pontos</a>
+                <a href="registrar_pontos.html">Registrar pontos</a>
+                <a href="fale_conosco.html">Fale Conosco</a>
             </div>
         </div>
     </div>
