--- a/telas/fale_conosco.html
+++ b/telas/fale_conosco.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylefaq.css">
-    <title>FAQ</title>
+    <title>SAC</title>
 </head>
 <body>
     <h1>Fale Conosco</h1>
     <div class="formulario">
     <form action="">
+        <h2>Digite sua mensagem</h2>
         <div class="nome">
         <label for="">Nome</label>
-    <input type="text" name="" id="">
+    <input type="text" name="" id="nome" placeholder="Digite seu nome completo" required>
         </div>
         <div class="email">
         <label for="">Email</label>
-    <input type="email" name="" id="">
+    <input type="email" name="" id="email" placeholder="exemplo@email.com" required>
 </div>
 <div class="telefone">
     <label for="">Telefone</label>
-    <input type="tel" name="" id="">
+    <input type="tel" id="telefone" name="telefone"  pattern="[0-9]{2}[0-9]{4,5}[0-9]{4}" placeholder="(XX) XXXXX-XXXX" >
 </div>
 <div class="mensagem">
     <label for="">Mensagem</label>
-    <input type="text" name="" id="">
+    
+    <textarea id="mensagem" name="mensagem" 
+          rows="4" cols="50"
+          placeholder="Digite sua mensagem aqui..."></textarea>
 </div>
     <input type="submit" value="Enviar">
 </div>
