--- a/telas/fale_conosco.html
+++ b/telas/fale_conosco.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Fale Conosco</h1>
     <div class="formulario">
-    <form action="">
+    <form action="https://formspree.io/f/xdkgaypq" method="POST">
         <h2>Digite sua mensagem</h2>
         <div class="nome">
         <label for="">Nome</label>
