--- a/telas/fale_conosco.html
+++ b/telas/fale_conosco.html
@@ -9,26 +9,27 @@
 <body>
     <h1>Fale Conosco</h1>
     <div class="formulario">
-    <form action="https://formspree.io/f/xdkgaypq" method="POST">
+    <form action="https://formspree.io/f/myzwwkre" method="POST">
         <h2>Digite sua mensagem</h2>
         <div class="nome">
         <label for="">Nome</label>
-    <input type="text" name="" id="nome" placeholder="Digite seu nome completo" required>
+    <input type="text" name="Nome" id="nome" placeholder="Digite seu nome completo">
         </div>
         <div class="email">
         <label for="">Email</label>
-    <input type="email" name="" id="email" placeholder="exemplo@email.com" required>
+    <input type="email" name="Email" id="email" placeholder="exemplo@email.com" >
 </div>
 <div class="telefone">
     <label for="">Telefone</label>
-    <input type="tel" id="telefone" name="telefone"  pattern="[0-9]{2}[0-9]{4,5}[0-9]{4}" placeholder="(XX) XXXXX-XXXX" >
+    <input type="tel" id="telefone" name="Telefone"  pattern="[0-9]{2}[0-9]{4,5}[0-9]{4}" placeholder="(XX) XXXXX-XXXX" >
 </div>
 <div class="mensagem">
     <label for="">Mensagem</label>
     
-    <textarea id="mensagem" name="mensagem" 
+    <textarea id="mensagem" name="Mensagem" 
           rows="4" cols="50"
           placeholder="Digite sua mensagem aqui..."></textarea>
+        
 </div>
     <input type="submit" value="Enviar">
 </div>
