--- a/telas/registrar_pontos.html
+++ b/telas/registrar_pontos.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/pontosstyle.css">
+    <title>Registro de Pontos</title>
 </head>
 <body>
-    
-</body>
+    <div class="container">
+
+        <h1>Registro de Pontos</h1>
+        <button>Scanear código de barras</button>
+
+
+
+        <button onclick="window.location.href='coddigito.php'">Digitar código de barras</button>
+    </div>
+</body> 
 </html>
