--- a/telas/navbar.html
+++ b/telas/navbar.html
@@ -17,7 +17,7 @@
             </button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="cadastro.html">Cadastro</a>
-                <a href="cadastro.html">Login</a>
+                <a href="login.php">Login</a>
                 <a href="ranking.html">Ranking</a>
                 <a href="#">Premios</a>
                 <a href="registrar_pontos.html">Registrar pontos</a>
